# test_phpMyAdmin_parsing

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  settings.py  tables.py  utils.py
